# iothdns

./: CMakeLists.txt  README.md  iothdns.c  iothdns.h  iothdns_gai.c  iothdns_gethost.c  iothdns_gethost.h  iothdns_getserv.c  iothdns_getserv.h  iothdns_pkt.c  name2dns.c  name2dns.h
test/: test_gai.c  test_iothq.c  test_query.c  test_server.c  testioth.c  testmain.c
